--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-22.04  # plus stable que 24.04
+    runs-on: ubuntu-22.04  #  pas ubuntu-latest ni ubuntu-24.04
 
     steps:
     - name: Checkout repository
